Fixing an small bug of visibility

--- a/public/stylesheets/catalogo.styl
+++ b/public/stylesheets/catalogo.styl
@@ -36,7 +36,7 @@ a
 	font-size 0.9em
 	text-align center
 .hidden
-	display none
+	visibility hidden
 #flower
 	height 70px
 @media (min-width:1200px)
